Changes in 0.6
- fix out-of-bounds memory access when processing last block of non-compressed
  download (patch from Timothy Lee). Also fix an error handling fault for the
  same.
- fix "try a smaller blocksize" failures when zsyncmakeing for huge compressed
  files on 32bit systems
- fix potential crash when re/deallocating checksum hash in librcksum (patch
  from Timothy Lee)
- explain status code errors better
- better URL handling
- add -q as a substitute for -s, as -q is more conventional (re wget). -q also
  suppresses the 'no relevant local data' warning now.
- fix some warnings
- code tidy-up and better commenting of what it is doing
- tidy up autoconf use

Changes in 0.5
- get large file support where possible
- replacement getaddrinfo on systems that lack it
- fix compilation on MacOS X

Changes in 0.4.3
- make -s suppress summary info too
- add HTTP authentication support

Changes in 0.4.2
- fix CAN-2005-1849 for embedded zlib
- obey -s flag

Changes in 0.4.1
- security fix from zlib-1.2.2
- generate RFC 1123 date strings in HTTP requests
- include port numbers in Host headers
- be slightly more accepting in proxy URL syntax
- don't generate Accept-Ranges headers

Changes in 0.4.0
- now considered beta instead of alpha quality
- fixed incorrect 100%/done display of progress bar when cleanly disconnected before end by server
- updated autoconf/automake scripts

Changes in 0.3.3
- build in gzip in zsyncmake which produces .gz files optimised for zsync
- quickly stop downloading from a URL producing bad data
- -k option to keep the .zsync file, and redownload only when it changes
- fixes some possible crashes that could occur with unexpected remote responses

Changes in 0.3.2
- automatically decompress local seed data when this is appropriate
- progress bars with rate and ETA for all downloads
- automatically recompress downloaded file if possible
- deal better with local .zsyncs containing relative URLs

Changes in 0.3.1