@@ -4,6 +4,7 @@ Changes in 0.6
   same.
 - fix "try a smaller blocksize" failures when zsyncmakeing for huge compressed
   files on 32bit systems
+- preserve mtime on downloaded files
 - fix potential crash when re/deallocating checksum hash in librcksum (patch
   from Timothy Lee)
 - explain status code errors better
